--- a/package.json
+++ b/package.json
@@ -1,16 +1,7 @@
 {
   "name": "zalo_chat_bot",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": "",
+  "type": "module",
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
